[gd_scene load_steps=2 format=3 uid="uid://dsllcvm7vi10m"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/setNode.gd" id="1"]

[node name="SetNode" type="GraphNode"]
offset_right = 300.0
offset_bottom = 60.0
title = "SetNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2

[node name="Variable" type="LineEdit" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The property to set the value of."
placeholder_text = "Variable"

[node name="Type" type="OptionButton" parent="BoxContainer"]
layout_mode = 2
tooltip_text = "The type of the value to set."
item_count = 5
selected = 0
popup/item_0/text = "="
popup/item_0/id = 0
popup/item_1/text = "+="
popup/item_1/id = 1
popup/item_2/text = "-="
popup/item_2/id = 2
popup/item_3/text = "*="
popup/item_3/id = 3
popup/item_4/text = "/="
popup/item_4/id = 4

[node name="Value" type="LineEdit" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The value to set the property to.
Eg: Bob, 12, 0.5, false, etc."
placeholder_text = "Value"

[node name="VariableTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ValueTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="text_changed" from="BoxContainer/Variable" to="." method="_on_variable_changed"]
[connection signal="item_selected" from="BoxContainer/Type" to="." method="_on_type_selected"]
[connection signal="text_changed" from="BoxContainer/Value" to="." method="_on_value_changed"]
[connection signal="timeout" from="VariableTimer" to="." method="_on_variable_timer_timeout"]
[connection signal="timeout" from="ValueTimer" to="." method="_on_value_timer_timeout"]
